# engram

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MULTI_SESSION_ANALYSIS.md  README.md  SECURITY.md  TODO.md  clippy.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: EXPERT_REVIEW.md  EXPERT_REVIEW_SUMMARY.md  LAYER7_WORK_IMPLEMENTATION_PLAN.md  MCP_SETUP.md  MULTI_SESSION_ARCHITECTURE.md  MULTI_SESSION_SUMMARY.md
engram-cli/: Cargo.toml
engram-cli/src/: daemon.rs  main.rs  proxy.rs
engram-core/: Cargo.toml
engram-core/src/: coordination.rs  document.rs  entity.rs  error.rs  id.rs  knowledge.rs  lib.rs  search.rs  session.rs  tool.rs  work.rs
engram-embed/: Cargo.toml
engram-embed/src/: config.rs  embedder.rs  error.rs  lib.rs
engram-index/: Cargo.toml
engram-index/src/: chunker.rs  coordination.rs  entity.rs  error.rs  knowledge.rs  lib.rs  parser.rs  pipeline.rs  search.rs  service.rs  session.rs  tool_intel.rs  version.rs  work.rs
engram-mcp/: Cargo.toml
engram-mcp/src/: error.rs  lib.rs  server.rs  tools.rs
engram-store/: Cargo.toml
engram-store/src/: config.rs  error.rs  lib.rs  repos.rs
engram-store/src/repos/: coordination.rs  document.rs  entity.rs  knowledge.rs  session.rs  tool.rs  work.rs
engram-tests/: Cargo.toml
engram-tests/tests/: coordination_tests.rs  document_tests.rs  entity_tests.rs  integration.rs  knowledge_tests.rs  multi_session_tests.rs  search_tests.rs  semantic_search_tests.rs  session_tests.rs  tool_intel_tests.rs  work_tests.rs
scripts/: test-coordination.sh  test-two-claude-sessions.md
