[workspace]
resolver = "2"
members = [
    "engram-core",
    "engram-store",
    "engram-embed",
    "engram-index",
    "engram-mcp",
    "engram-cli",
    "engram-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
authors = ["Yuval Meiri"]
repository = "https://github.com/ymeiri/engram"
homepage = "https://github.com/ymeiri/engram"
description = "Personal Knowledge Augmentation System for AI coding agents"
keywords = ["mcp", "knowledge-graph", "ai-agents", "memory", "context"]
categories = ["development-tools", "database"]

[workspace.dependencies]
# Internal crates
engram-core = { path = "engram-core" }
engram-store = { path = "engram-store" }
engram-embed = { path = "engram-embed" }
engram-index = { path = "engram-index" }
engram-mcp = { path = "engram-mcp" }

# Database - SurrealDB with RocksDB persistence and in-memory for tests
surrealdb = { version = "2", features = ["kv-rocksdb", "kv-mem", "kv-surrealkv"] }

# MCP Protocol - v0.14 with HTTP transport for multi-session support
rmcp = { version = "0.14", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-client",
] }

# HTTP server for daemon mode
axum = "0.8"
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }

# Embeddings - local inference
fastembed = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# IDs and timestamps
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
rstest = "0.24"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"

# Utilities
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
futures = "0.3"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster dev builds by limiting debug info
debug = 1
