[package]
name = "engram-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core domain types and invariants for engram"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# IDs and timestamps
uuid.workspace = true
time.workspace = true

[dev-dependencies]
rstest.workspace = true
insta.workspace = true
