[package]
name = "engram-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Embedding generation for engram using fastembed"

[dependencies]
engram-core.workspace = true

# Embeddings
fastembed.workspace = true

# Async
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Caching
dashmap.workspace = true
parking_lot.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
